k8s/proof2-elasticsearch.yaml
apiVersion: v1
kind: Service
metadata:
  name: proof2-elastic-service
  labels:
    iai.kit.edu/app: proof2-elastic
spec:
  ports:
    - name: "http"
      port: 9200
      targetPort: 9200
  selector:
    iai.kit.edu/app: proof2-elastic
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proof2-elastic-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik2-redirect-to-https@kubernetescrd
  labels:
    iai.kit.edu/app: proof2-elastic
spec:
  rules:
    - host: proof2-elastic.cloud.iai.kit.edu
      http:
        paths:
          - backend:
              service:
                name: proof2-elastic-service
                port:
                  number: 9200
            path: /
            pathType: Prefix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proof2-elastic
  labels:
    iai.kit.edu/app: proof2-elastic
spec:
  replicas: 1
  selector:
    matchLabels:
      iai.kit.edu/app: proof2-elastic
  template:
    metadata:
      labels:
        iai.kit.edu/app: proof2-elastic
    spec:
      containers:
        - env:
            - name: node.name
              value: es7node
            - name: discovery.type
              value: single-node
            - name: bootstrap.memory_lock
              value: "true"
            - name: xpack.security.enabled
              value: "false"
            - name: ES_MIN_MEM
              value: 256m
            - name: ES_MAX_MEM
              value: 768m
            - name: http.cors.allow-origin
              value: "*"
            - name: http.cors.enabled
              value: "true"
            - name: http.cors.allow-headers
              value: "X-Requested-With,X-Auth-Token,Content-Type,Content-Length,Authorization"
            - name: http.cors.allow-credentials
              value: "true"
          image: docker.elastic.co/elasticsearch/elasticsearch:7.17.6
          name: proof2-elastic
          ports:
            - containerPort: 9200
              protocol: TCP
          resources:
            limits:
              cpu: 1000m
              memory: 8Gi
            requests:
              cpu: 1000m
              memory: 4Gi
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: data
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1000
      terminationGracePeriodSeconds: 30
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: proof2-elastic-data
