k8s/proof2-orchestrator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proof2-orchestrator
  labels:
    iai.kit.edu/app: proof2-orchestrator
spec:
  replicas: 1
  selector:
    matchLabels:
      name: proof2-orchestrator
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: proof2-orchestrator
        iai.kit.edu/app: proof2-orchestrator
    spec:
      containers:
        - image: iai-artifactory.iai.kit.edu/docker-webis/proof-2/proof-orchestrator:3.0.7
          name: proof2-orchestrator
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 2000m
              memory: 4000Mi
            requests:
              cpu: 200m
              memory: 2000Mi
      hostname: proof2-orchestrator
      terminationGracePeriodSeconds: 30
      securityContext: { }
      imagePullSecrets:
        - name: iai-artifactory.iai.kit.edu-webis
      restartPolicy: Always
      serviceAccountName: proof2-orchestrator-account
---
apiVersion: v1
kind: Service
metadata:
  labels:
    iai.kit.edu/app: proof2-orchestrator
  name: proof2-orchestrator
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    name: proof2-orchestrator

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proof2-orchestrator-ingress
  labels:
    iai.kit.edu/app: proof-2
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik2-redirect-to-https@kubernetescrd
spec:
  rules:
    - host: proof2-orchestrator.cloud.iai.kit.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: proof2-orchestrator
                port:
                  number: 8080
